產品列表功能

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="mt-4">
                 <!-- 產品Modal -->
-
+                <product-modal ref="productModal" :id="productId"></product-modal>
                 <!-- 產品Modal -->
 
                 <!-- 產品列表 -->
@@ -35,21 +35,26 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td style="width: 200px">
-                                <div style="height: 100px; background-size: cover; background-position: center"></div>
+                        <tr v-for="(product, index) in products" :key="product.id">
+                            <td style="width: 300px">
+                                <div style="height: 100px; background-size: cover; background-position: center"
+                                    :style="{backgroundImage: `url(${product.imageUrl})`}"></div>
                             </td>
                             <td>
-                                {{ }}
+                                {{ product.title }}
                             </td>
                             <td>
-                                <div class="h5">{{ }} 元</div>
-                                <del class="h6">原價 {{ }} 元</del>
-                                <div class="h5">現在只要 {{ }} 元</div>
+                                <div class="h5" v-if="product.price === product.origin_price">{{ product.price }} 元
+                                </div>
+                                <div v-else>
+                                    <del class="h6">原價 {{ product.origin_price }} 元</del>
+                                    <div class="h5">現在只要 {{ product.price }} 元</div>
+                                </div>
                             </td>
                             <td>
                                 <div class="btn-group btn-group-sm">
-                                    <button type="button" class="btn btn-outline-secondary">
+                                    <button type="button" class="btn btn-outline-secondary"
+                                        @click="openProductModal(product.id)">
                                         <i class="fas fa-spinner fa-pulse"></i>
                                         查看更多
                                     </button>
@@ -76,7 +81,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <template v-if="cart.carts">
+                        <template v-if="cartData.carts">
                             <tr>
                                 <td>
                                     <button type="button" class="btn btn-outline-danger btn-sm">
@@ -159,46 +164,51 @@
         </div>
     </div>
 
-
-    <script type="text/x-template" id="userProductModal">
-    <div class="modal fade" id="productModal" tabindex="-1" role="dialog"
-       aria-labelledby="exampleModalLabel" aria-hidden="true" ref="modal">
-    <div class="modal-dialog modal-xl" role="document">
-      <div class="modal-content border-0">
-        <div class="modal-header bg-dark text-white">
-          <h5 class="modal-title" id="exampleModalLabel">
-            <span>{{  }}</span>
-        </h5>
-          <button type="button" class="btn-close"
-                  data-bs-dismiss="modal" aria-label="Close"></button>
+    <!-- ProductModal -->
+    <script type="text/x-template" id="productModal">
+    <div class="modal fade" id="productModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true" ref="modal">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content border-0">
+                <div class="modal-header bg-dark text-white">
+                    <h5 class="modal-title" id="exampleModalLabel">
+                        <span>{{ product.title }}</span>
+                    </h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <img class="img-fluid" :src="product.imageUrl" alt="">
+                            <div>
+                                <img v-for="(image, index) in product.imagesUrl" :key="image" :src="image" alt="" 
+                                class="mt-2 me-2" style="height: 150px; background-size: cover">
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <span class="badge bg-primary rounded-pill">{{ product.category }}</span>
+                            <p>商品描述：{{ product.description }}</p>
+                            <p>商品內容：{{ product.content }}</p>
+                            <div class="h5" v-if="product.price === product.origin_price">{{ product.price }} 元</div>
+                            <div v-else>
+                                <del class="h6">原價 {{ product.origin_price }} 元</del>
+                                <div class="h5">現在只要 {{ product.price }} 元</div>
+                            </div>
+                            <div>
+                                <div class="input-group">
+                                    <input type="number" class="form-control" min="1">
+                                    <button type="button" class="btn btn-primary">加入購物車</button>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- col-sm-6 end -->
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="modal-body">
-          <div class="row">
-            <div class="col-sm-6">
-              <img class="img-fluid" :src="..." alt="">
-        </div>
-            <div class="col-sm-6">
-              <span class="badge bg-primary rounded-pill">{{  }}</span>
-              <p>商品描述：{{  }}</p>
-              <p>商品內容：{{  }}</p>
-              <div class="h5">{{  }} 元</div>
-              <del class="h6">原價 {{ }} 元</del>
-              <div class="h5">現在只要 {{  }} 元</div>
-              <div>
-                <div class="input-group">
-                  <input type="number" class="form-control"
-                         min="1">
-                  <button type="button" class="btn btn-primary">加入購物車</button>
-        </div>
-        </div>
-        </div>
-            <!-- col-sm-6 end -->
-        </div>
-        </div>
-        </div>
-        </div>
-        </div>
-      </script>
+    </div>
+    </script>
 
     <!-- axios -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.9.1/axios.min.js'
