--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
     <!-- ProductModal -->
     <script type="text/x-template" id="productModal">
-    <div class="modal fade" id="productModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    <div class="modal fade" id="productModal" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true" ref="modal">
         <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content border-0">
